// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`selectableCardField > should render correctly 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.5rem;
}

.emotion-2 {
  border: none;
  padding: 0;
  margin: 0;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.75rem;
}

.emotion-7 {
  color: #3f4250;
  font-size: 1rem;
  font-family: Inter,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.5rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: text;
}

.emotion-9 {
  display: grid;
  grid-template-columns: repeat(1, minmax(0, 1fr));
  gap: 1rem;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
}

.emotion-11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.25rem;
  position: relative;
  padding: 1rem;
  border-radius: 0.25rem;
  -webkit-transition: border-color 200ms ease,box-shadow 200ms ease;
  transition: border-color 200ms ease,box-shadow 200ms ease;
  cursor: pointer;
  background: #ffffff;
  border: 1px solid #d9dadd;
  color: #3f4250;
}

.emotion-11[data-has-label='false']>:first-child {
  margin-bottom: -0.25rem;
}

.emotion-11[data-has-default-cursor='true'] {
  cursor: default;
}

.emotion-11[data-checked='true'] {
  border: 1px solid #8c40ef;
}

.emotion-11[data-error='true'] {
  border: 1px solid #b3144d;
}

.emotion-11[data-disabled='true'] {
  border: 1px solid #e9eaeb;
  color: #b5b7bd;
  background: #f3f3f4;
  cursor: not-allowed;
}

.emotion-11[data-image="illustration"] {
  padding: 0rem;
}

.emotion-11[data-image="icon"] {
  padding: 0rem;
  padding-right: 1rem;
}

.emotion-11:hover:not([data-error='true']):not([data-disabled='true']),
.emotion-11:active:not([data-error='true']):not([data-disabled='true']) {
  border: 1px solid #8c40ef;
}

.emotion-11:hover:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'],
.emotion-11:active:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'] {
  box-shadow: 0px 4px 16px 4px #f6f3ffcc;
}

.emotion-11[data-has-label='true'] .emotion-14,
.emotion-11[data-has-label='true'] .eqr7bqq0 {
  width: 100%;
}

.emotion-13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.25rem;
}

.emotion-16 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 0.5rem;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
}

.emotion-16[aria-disabled='false'],
.emotion-16[aria-disabled='false']>label {
  cursor: pointer;
}

.emotion-16:hover[aria-disabled='false'] .emotion-19+.emotion-21 {
  fill: #8c40ef;
}

.emotion-16:hover[aria-disabled='false'] .emotion-19+.emotion-21 .emotion-23 {
  fill: #e5dbfd;
}

.emotion-16:hover[aria-disabled='false'] .emotion-19[aria-invalid='true']+.emotion-21 {
  fill: #b3144d;
}

.emotion-16:hover[aria-disabled='false'] .emotion-19[aria-invalid='true']+.emotion-21 .emotion-23 {
  fill: #ffd3e3;
}

.emotion-16[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.emotion-16[aria-disabled='true']>label,
.emotion-16[aria-disabled='true'] .emotion-19 {
  cursor: not-allowed;
}

.emotion-16[aria-disabled='true'] .emotion-21 {
  fill: #e9eaeb;
  cursor: not-allowed;
}

.emotion-16[aria-disabled='true'] .emotion-21 .emotion-23 {
  fill: #f3f3f4;
}

.emotion-16[data-checked='true'] {
  color: #641cb3;
}

.emotion-16[data-error='true'] {
  color: #b3144d;
}

.emotion-16[aria-disabled='true'] {
  color: #b5b7bd;
}

.emotion-16 input+svg {
  display: none;
}

.emotion-16:hover[aria-disabled='false']:not([data-checked='true']) .emotion-19+.emotion-21 {
  fill: #d9dadd;
}

.emotion-16:hover[aria-disabled='false']:not([data-checked='true']) .emotion-19+.emotion-21 .emotion-23 {
  fill: #ffffff;
}

.emotion-16:hover[aria-disabled='false']:not([data-checked='true']) .emotion-19[aria-invalid='true']+.emotion-21 {
  fill: #b3144d;
}

.emotion-16:hover[aria-disabled='false']:not([data-checked='true']) .emotion-19[aria-invalid='true']+.emotion-21 .emotion-23 {
  fill: #ffffff;
}

.emotion-16:hover[aria-disabled='false'] .emotion-19+.emotion-21 {
  fill: #8c40ef;
}

.emotion-16:hover[aria-disabled='false'] .emotion-19+.emotion-21 .emotion-23 {
  fill: #ffffff;
}

.emotion-16:hover[aria-disabled='false'] .emotion-19[aria-invalid='true']+.emotion-21 {
  fill: #b3144d;
}

.emotion-16:hover[aria-disabled='false'] .emotion-19[aria-invalid='true']+.emotion-21 .emotion-23 {
  fill: #ffffff;
}

.emotion-16 .emotion-19[aria-disabled='false']:active+.emotion-21 {
  background: none;
  fill: #8c40ef;
}

.emotion-16 .emotion-19[aria-disabled='false']:active+.emotion-21 .emotion-23 {
  fill: #ffffff;
}

.emotion-18 {
  cursor: pointer;
  position: absolute;
  height: 1.5rem;
  width: 1.5rem;
  opacity: 0;
  white-space: nowrap;
  border-width: 0;
}

.emotion-18+.emotion-21 .emotion-25 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.emotion-18:checked+svg .emotion-25 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.emotion-18:checked[aria-disabled='false'][aria-invalid='false']+.emotion-21 {
  fill: #8c40ef;
}

.emotion-18:checked[aria-disabled='true'][aria-invalid='false']+.emotion-21 {
  fill: #d8c5fc;
}

.emotion-18[aria-invalid='true']:not([aria-disabled='true'])+.emotion-21 {
  fill: #e51963;
}

.emotion-18[aria-disabled='false']:active+.emotion-21 {
  background-color: #5e127e40;
  fill: #8c40ef;
}

.emotion-18[aria-disabled='false']:active+.emotion-21 .emotion-23 {
  fill: #f1eefc;
}

.emotion-18[aria-disabled='false']:focus-visible+.emotion-21 {
  outline: -webkit-focus-ring-color auto 1px;
}

.emotion-18[aria-invalid='true']:focus+.emotion-21 {
  background-color: #f91b6c40;
  fill: #e51963;
}

.emotion-18[aria-invalid='true']:focus+.emotion-21 .emotion-23 {
  fill: #ffebf2;
}

.emotion-20 {
  height: 1.5rem;
  width: 1.5rem;
  min-width: 1.5rem;
  min-height: 1.5rem;
  border-radius: 100%;
  fill: #d9dadd;
}

.emotion-20 .emotion-23 {
  fill: #ffffff;
}

.emotion-27 {
  font-size: 1rem;
  font-family: Inter,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1.5rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  cursor: pointer;
}

<div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        class="emotion-0 emotion-1"
      >
        <fieldset
          class="emotion-2 emotion-3"
        >
          <div
            class="emotion-4 emotion-1"
          >
            <legend
              class="emotion-6 emotion-7 emotion-8"
            >
              test
            </legend>
            <div
              class="emotion-9 emotion-10"
            >
              <div
                class="emotion-11 emotion-12"
                data-checked="false"
                data-disabled="false"
                data-error="false"
                data-has-default-cursor="false"
                data-has-label="true"
                data-image="none"
                data-type="radio"
                role="button"
                tabindex="0"
              >
                <div
                  class="emotion-13 emotion-14"
                >
                  <div
                    aria-disabled="false"
                    class="emotion-15 emotion-16 emotion-17"
                    data-checked="false"
                    data-error="false"
                  >
                    <input
                      aria-disabled="false"
                      aria-invalid="false"
                      class="emotion-18 emotion-19"
                      id="«r2»"
                      name="test"
                      tabindex="-1"
                      type="radio"
                      value="radio 1"
                    />
                    <svg
                      class="emotion-20 emotion-21"
                      viewBox="0 0 24 24"
                    >
                      <g>
                        <circle
                          cx="12"
                          cy="12"
                          r="10"
                          stroke-width="2"
                        />
                        <circle
                          class="emotion-22 emotion-23"
                          cx="12"
                          cy="12"
                          r="8"
                        />
                        <circle
                          class="emotion-24 emotion-25"
                          cx="12"
                          cy="12"
                          r="5"
                        />
                      </g>
                    </svg>
                    <label
                      class="emotion-26 emotion-27 emotion-8"
                      for="«r2»"
                    >
                      Radio 1
                    </label>
                  </div>
                </div>
              </div>
              <div
                class="emotion-11 emotion-12"
                data-checked="false"
                data-disabled="false"
                data-error="false"
                data-has-default-cursor="false"
                data-has-label="true"
                data-image="none"
                data-type="radio"
                role="button"
                tabindex="0"
              >
                <div
                  class="emotion-13 emotion-14"
                >
                  <div
                    aria-disabled="false"
                    class="emotion-15 emotion-16 emotion-17"
                    data-checked="false"
                    data-error="false"
                  >
                    <input
                      aria-disabled="false"
                      aria-invalid="false"
                      class="emotion-18 emotion-19"
                      id="«r6»"
                      name="test"
                      tabindex="-1"
                      type="radio"
                      value="radio 2"
                    />
                    <svg
                      class="emotion-20 emotion-21"
                      viewBox="0 0 24 24"
                    >
                      <g>
                        <circle
                          cx="12"
                          cy="12"
                          r="10"
                          stroke-width="2"
                        />
                        <circle
                          class="emotion-22 emotion-23"
                          cx="12"
                          cy="12"
                          r="8"
                        />
                        <circle
                          class="emotion-24 emotion-25"
                          cx="12"
                          cy="12"
                          r="5"
                        />
                      </g>
                    </svg>
                    <label
                      class="emotion-26 emotion-27 emotion-8"
                      for="«r6»"
                    >
                      Radio 2
                    </label>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </fieldset>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`selectableCardField > should render correctly checked as a checkbox 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.5rem;
}

.emotion-2 {
  border: none;
  padding: 0;
  margin: 0;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.75rem;
}

.emotion-7 {
  color: #3f4250;
  font-size: 1rem;
  font-family: Inter,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.5rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: text;
}

.emotion-9 {
  display: grid;
  grid-template-columns: repeat(1, minmax(0, 1fr));
  gap: 1rem;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
}

.emotion-11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.25rem;
  position: relative;
  padding: 1rem;
  border-radius: 0.25rem;
  -webkit-transition: border-color 200ms ease,box-shadow 200ms ease;
  transition: border-color 200ms ease,box-shadow 200ms ease;
  cursor: pointer;
  background: #ffffff;
  border: 1px solid #d9dadd;
  color: #3f4250;
}

.emotion-11[data-has-label='false']>:first-child {
  margin-bottom: -0.25rem;
}

.emotion-11[data-has-default-cursor='true'] {
  cursor: default;
}

.emotion-11[data-checked='true'] {
  border: 1px solid #8c40ef;
}

.emotion-11[data-error='true'] {
  border: 1px solid #b3144d;
}

.emotion-11[data-disabled='true'] {
  border: 1px solid #e9eaeb;
  color: #b5b7bd;
  background: #f3f3f4;
  cursor: not-allowed;
}

.emotion-11[data-image="illustration"] {
  padding: 0rem;
}

.emotion-11[data-image="icon"] {
  padding: 0rem;
  padding-right: 1rem;
}

.emotion-11:hover:not([data-error='true']):not([data-disabled='true']),
.emotion-11:active:not([data-error='true']):not([data-disabled='true']) {
  border: 1px solid #8c40ef;
}

.emotion-11:hover:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'],
.emotion-11:active:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'] {
  box-shadow: 0px 4px 16px 4px #f6f3ffcc;
}

.emotion-11[data-has-label='true'] .ehkrmld6,
.emotion-11[data-has-label='true'] .emotion-15 {
  width: 100%;
}

.emotion-14 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0.5rem;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
}

.emotion-14 .eqr7bqq3 {
  cursor: pointer;
}

.emotion-14[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.emotion-14[aria-disabled='true'] .eqr7bqq3 {
  cursor: not-allowed;
}

.emotion-14[aria-disabled='true'] .emotion-19 {
  fill: #e9eaeb;
}

.emotion-14[aria-disabled='true'] .emotion-19 .emotion-21 {
  stroke: #d9dadd;
  fill: #f3f3f4;
}

.emotion-14[aria-disabled='true'] .emotion-17[aria-invalid="true"]:checked+.emotion-19 {
  fill: #ffd3e3;
}

.emotion-14[aria-disabled='true'] .emotion-17[aria-invalid="true"]:checked+.emotion-19 .emotion-21 {
  stroke: #ffd3e3;
  fill: #ffd3e3;
}

.emotion-14[aria-disabled='true'] .emotion-17[aria-invalid="true"]+.emotion-19 {
  fill: #ffebf2;
}

.emotion-14[aria-disabled='true'] .emotion-17[aria-invalid="true"]+.emotion-19 .emotion-21 {
  stroke: #ffbbd3;
  fill: #ffebf2;
}

.emotion-14[aria-disabled='true'] .emotion-17:checked+.emotion-19 {
  fill: #e5dbfd;
}

.emotion-14[aria-disabled='true'] .emotion-17:checked+.emotion-19 .emotion-21 {
  stroke: #d8c5fc;
  fill: #d8c5fc;
}

.emotion-14[aria-disabled='true'] .emotion-17[aria-checked="mixed"]+.emotion-19 {
  fill: #e5dbfd;
}

.emotion-14[aria-disabled='true'] .emotion-17[aria-checked="mixed"]+.emotion-19 .emotion-21 {
  stroke: #e5dbfd;
  fill: #e5dbfd;
}

.emotion-14 .emotion-17:checked+.emotion-19 path {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-transform: translate(2px, 2px);
  -moz-transform: translate(2px, 2px);
  -ms-transform: translate(2px, 2px);
  transform: translate(2px, 2px);
}

.emotion-14 .emotion-17:checked+.emotion-19 .emotion-21 {
  fill: #8c40ef;
  stroke: #8c40ef;
}

.emotion-14 .emotion-17[aria-invalid="true"]:checked+.emotion-19 .emotion-21 {
  fill: #e51963;
  stroke: #e51963;
}

.emotion-14 .emotion-17[aria-checked="mixed"]+.emotion-19 .eqr7bqq5 {
  fill: #ffffff;
}

.emotion-14 .emotion-17[aria-checked="mixed"]+.emotion-19 .emotion-21 {
  fill: #8c40ef;
  stroke: #8c40ef;
}

.emotion-14:hover[aria-disabled='false'] .emotion-17[aria-invalid='false'][aria-checked='false']+.emotion-19 .emotion-21 {
  stroke: #792dd4;
  fill: #e5dbfd;
}

.emotion-14:hover[aria-disabled='false'] .emotion-17[aria-invalid='false'][aria-checked='true']+.emotion-19 .emotion-21 {
  stroke: #792dd4;
  fill: #792dd4;
}

.emotion-14:hover[aria-disabled='false'] .emotion-17[aria-invalid='false'][aria-checked='mixed']+.emotion-19 .emotion-21 {
  stroke: #792dd4;
  fill: #792dd4;
}

.emotion-14:hover[aria-disabled='false'] .emotion-17[aria-invalid='true'][aria-checked='false']+.emotion-19 .emotion-21 {
  stroke: #92103f;
  fill: #ffd3e3;
}

.emotion-14:hover[aria-disabled='false'] .emotion-17[aria-invalid='true'][aria-checked='true']+.emotion-19 .emotion-21 {
  stroke: #d6175c;
  fill: #d6175c;
}

.emotion-14 .emotion-17[aria-invalid="true"]+.emotion-19 {
  fill: #e51963;
}

.emotion-14 .emotion-17[aria-invalid="true"]+.emotion-19 .emotion-21 {
  stroke: #e51963;
  fill: #ffebf2;
}

.emotion-14[data-checked='true'] {
  color: #641cb3;
}

.emotion-14[data-error='true'] {
  color: #b3144d;
}

.emotion-14[aria-disabled='true'] {
  color: #b5b7bd;
}

.emotion-14 input+svg {
  display: none;
}

.emotion-14 label {
  width: 100%;
}

.emotion-14:hover[aria-disabled='false'] .emotion-17[aria-invalid='false'][aria-checked='false']+.emotion-19 .emotion-21 {
  fill: #ffffff;
  stroke: #d9dadd;
}

.emotion-14:hover[aria-disabled='false'] .emotion-17[aria-invalid='false'][aria-checked='true']+.emotion-19 .emotion-21 {
  stroke: #8c40ef;
  fill: #8c40ef;
}

.emotion-14:hover[aria-disabled='false'] .emotion-17[aria-invalid='false'][aria-checked='mixed']+.emotion-19 .emotion-21 {
  stroke: #8c40ef;
  fill: #8c40ef;
}

.emotion-14 .emotion-17:focus+.emotion-19,
.emotion-14 .emotion-17:active+.emotion-19 {
  outline: none;
  background-color: #ffffff;
  fill: #ffffff;
}

.emotion-14 .emotion-17[aria-checked='false'] .emotion-21 {
  fill: #ffffff;
  stroke: #d9dadd;
}

.emotion-16 {
  position: absolute;
  white-space: nowrap;
  height: 1.5rem;
  width: 1.5rem;
  opacity: 0;
  border-width: 0;
}

.emotion-16:not(:disabled) {
  cursor: pointer;
}

.emotion-16:disabled {
  cursor: not-allowed;
}

.emotion-16:not(:disabled):checked+.emotion-19,
.emotion-16:not(:disabled)[aria-checked='mixed']+.emotion-19 {
  fill: #8c40ef;
}

.emotion-16:not(:disabled):checked+.emotion-19 .emotion-21,
.emotion-16:not(:disabled)[aria-checked='mixed']+.emotion-19 .emotion-21 {
  stroke: #8c40ef;
}

.emotion-16:not(:disabled)[aria-invalid='true']+.emotion-19,
.emotion-16:not(:disabled)[aria-invalid='mixed']+.emotion-19 {
  fill: #ffebf2;
}

.emotion-16:not(:disabled)[aria-invalid='true']+.emotion-19 .emotion-21,
.emotion-16:not(:disabled)[aria-invalid='mixed']+.emotion-19 .emotion-21 {
  stroke: #b3144d;
}

.emotion-16:focus+.emotion-19 {
  background-color: #f1eefc;
  fill: #ffebf2;
  outline: 1px solid 0px 0px 0px 3px #8c40ef40;
}

.emotion-16:focus+.emotion-19 .emotion-21 {
  stroke: #792dd4;
  fill: #e5dbfd;
}

.emotion-16[aria-invalid='true']:focus+.emotion-19 {
  background-color: #ffebf2;
  fill: #ffebf2;
  outline: 1px solid 0px 0px 0px 3px #f91b6c40;
}

.emotion-16[aria-invalid='true']:focus+.emotion-19 .emotion-21 {
  stroke: #92103f;
  fill: #ffd3e3;
}

.emotion-18 {
  border-radius: 0.25rem;
  height: 1.5rem;
  width: 1.5rem;
  min-width: 1.5rem;
  min-height: 1.5rem;
}

.emotion-18 path {
  fill: #ffffff;
  -webkit-transform: translate(2px, 2px);
  -moz-transform: translate(2px, 2px);
  -ms-transform: translate(2px, 2px);
  transform: translate(2px, 2px);
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.emotion-20 {
  fill: #ffffff;
  stroke: #d9dadd;
}

.emotion-22 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.25rem;
}

.emotion-24 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 0.25rem;
}

.emotion-27 {
  color: #3f4250;
  font-size: 1rem;
  font-family: Inter,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1.5rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  width: 100%;
  cursor: pointer;
}

<div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        class="emotion-0 emotion-1"
      >
        <fieldset
          class="emotion-2 emotion-3"
        >
          <div
            class="emotion-4 emotion-1"
          >
            <legend
              class="emotion-6 emotion-7 emotion-8"
            >
              test
            </legend>
            <div
              class="emotion-9 emotion-10"
            >
              <div
                class="emotion-11 emotion-12"
                data-checked="true"
                data-disabled="false"
                data-error="false"
                data-has-default-cursor="false"
                data-has-label="true"
                data-image="none"
                data-testid="checked"
                data-type="checkbox"
                role="button"
                tabindex="0"
              >
                <div
                  aria-disabled="false"
                  class="emotion-13 emotion-14 emotion-15"
                  data-checked="true"
                  data-error="false"
                >
                  <input
                    aria-checked="true"
                    aria-invalid="false"
                    checked=""
                    class="emotion-16 emotion-17"
                    id="«rg»"
                    name="test"
                    tabindex="-1"
                    type="checkbox"
                    value="checked"
                  />
                  <svg
                    class="emotion-18 emotion-19"
                    fill="none"
                    viewBox="0 0 24 24"
                  >
                    <g>
                      <rect
                        class="emotion-20 emotion-21"
                        height="16"
                        rx="0.125rem"
                        stroke-width="2"
                        width="16"
                        x="4"
                        y="4"
                      />
                      <path
                        clip-rule="evenodd"
                        d="M15.6678 5.26709C16.0849 5.6463 16.113 6.28907 15.7307 6.70276L9.29172 13.6705C9.10291 13.8748 8.83818 13.9937 8.55884 13.9998C8.2795 14.0058 8.0098 13.8984 7.81223 13.7024L4.30004 10.2185C3.89999 9.82169 3.89999 9.17831 4.30004 8.78149C4.70009 8.38467 5.34869 8.38467 5.74874 8.78149L8.50441 11.5149L14.2205 5.32951C14.6028 4.91583 15.2508 4.88788 15.6678 5.26709Z"
                        fill="white"
                        fill-rule="evenodd"
                        height="9"
                        width="12"
                        x="5"
                        y="4"
                      />
                    </g>
                  </svg>
                  <div
                    class="emotion-22 emotion-1"
                  >
                    <div
                      class="emotion-24 emotion-1"
                    >
                      <label
                        class="emotion-26 emotion-27 emotion-8"
                        for="«rg»"
                      >
                        Checkbox 1
                      </label>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </fieldset>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`selectableCardField > should render correctly checked as radiofield 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.5rem;
}

.emotion-2 {
  border: none;
  padding: 0;
  margin: 0;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.75rem;
}

.emotion-7 {
  color: #3f4250;
  font-size: 1rem;
  font-family: Inter,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.5rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: text;
}

.emotion-9 {
  display: grid;
  grid-template-columns: repeat(1, minmax(0, 1fr));
  gap: 1rem;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
}

.emotion-11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.25rem;
  position: relative;
  padding: 1rem;
  border-radius: 0.25rem;
  -webkit-transition: border-color 200ms ease,box-shadow 200ms ease;
  transition: border-color 200ms ease,box-shadow 200ms ease;
  cursor: pointer;
  background: #ffffff;
  border: 1px solid #d9dadd;
  color: #3f4250;
}

.emotion-11[data-has-label='false']>:first-child {
  margin-bottom: -0.25rem;
}

.emotion-11[data-has-default-cursor='true'] {
  cursor: default;
}

.emotion-11[data-checked='true'] {
  border: 1px solid #8c40ef;
}

.emotion-11[data-error='true'] {
  border: 1px solid #b3144d;
}

.emotion-11[data-disabled='true'] {
  border: 1px solid #e9eaeb;
  color: #b5b7bd;
  background: #f3f3f4;
  cursor: not-allowed;
}

.emotion-11[data-image="illustration"] {
  padding: 0rem;
}

.emotion-11[data-image="icon"] {
  padding: 0rem;
  padding-right: 1rem;
}

.emotion-11:hover:not([data-error='true']):not([data-disabled='true']),
.emotion-11:active:not([data-error='true']):not([data-disabled='true']) {
  border: 1px solid #8c40ef;
}

.emotion-11:hover:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'],
.emotion-11:active:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'] {
  box-shadow: 0px 4px 16px 4px #f6f3ffcc;
}

.emotion-11[data-has-label='true'] .emotion-14,
.emotion-11[data-has-label='true'] .eqr7bqq0 {
  width: 100%;
}

.emotion-13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.25rem;
}

.emotion-16 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 0.5rem;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
}

.emotion-16[aria-disabled='false'],
.emotion-16[aria-disabled='false']>label {
  cursor: pointer;
}

.emotion-16:hover[aria-disabled='false'] .emotion-19+.emotion-21 {
  fill: #8c40ef;
}

.emotion-16:hover[aria-disabled='false'] .emotion-19+.emotion-21 .emotion-23 {
  fill: #e5dbfd;
}

.emotion-16:hover[aria-disabled='false'] .emotion-19[aria-invalid='true']+.emotion-21 {
  fill: #b3144d;
}

.emotion-16:hover[aria-disabled='false'] .emotion-19[aria-invalid='true']+.emotion-21 .emotion-23 {
  fill: #ffd3e3;
}

.emotion-16[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.emotion-16[aria-disabled='true']>label,
.emotion-16[aria-disabled='true'] .emotion-19 {
  cursor: not-allowed;
}

.emotion-16[aria-disabled='true'] .emotion-21 {
  fill: #e9eaeb;
  cursor: not-allowed;
}

.emotion-16[aria-disabled='true'] .emotion-21 .emotion-23 {
  fill: #f3f3f4;
}

.emotion-16[data-checked='true'] {
  color: #641cb3;
}

.emotion-16[data-error='true'] {
  color: #b3144d;
}

.emotion-16[aria-disabled='true'] {
  color: #b5b7bd;
}

.emotion-16 input+svg {
  display: none;
}

.emotion-16:hover[aria-disabled='false']:not([data-checked='true']) .emotion-19+.emotion-21 {
  fill: #d9dadd;
}

.emotion-16:hover[aria-disabled='false']:not([data-checked='true']) .emotion-19+.emotion-21 .emotion-23 {
  fill: #ffffff;
}

.emotion-16:hover[aria-disabled='false']:not([data-checked='true']) .emotion-19[aria-invalid='true']+.emotion-21 {
  fill: #b3144d;
}

.emotion-16:hover[aria-disabled='false']:not([data-checked='true']) .emotion-19[aria-invalid='true']+.emotion-21 .emotion-23 {
  fill: #ffffff;
}

.emotion-16:hover[aria-disabled='false'] .emotion-19+.emotion-21 {
  fill: #8c40ef;
}

.emotion-16:hover[aria-disabled='false'] .emotion-19+.emotion-21 .emotion-23 {
  fill: #ffffff;
}

.emotion-16:hover[aria-disabled='false'] .emotion-19[aria-invalid='true']+.emotion-21 {
  fill: #b3144d;
}

.emotion-16:hover[aria-disabled='false'] .emotion-19[aria-invalid='true']+.emotion-21 .emotion-23 {
  fill: #ffffff;
}

.emotion-16 .emotion-19[aria-disabled='false']:active+.emotion-21 {
  background: none;
  fill: #8c40ef;
}

.emotion-16 .emotion-19[aria-disabled='false']:active+.emotion-21 .emotion-23 {
  fill: #ffffff;
}

.emotion-18 {
  cursor: pointer;
  position: absolute;
  height: 1.5rem;
  width: 1.5rem;
  opacity: 0;
  white-space: nowrap;
  border-width: 0;
}

.emotion-18+.emotion-21 .emotion-25 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.emotion-18:checked+svg .emotion-25 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.emotion-18:checked[aria-disabled='false'][aria-invalid='false']+.emotion-21 {
  fill: #8c40ef;
}

.emotion-18:checked[aria-disabled='true'][aria-invalid='false']+.emotion-21 {
  fill: #d8c5fc;
}

.emotion-18[aria-invalid='true']:not([aria-disabled='true'])+.emotion-21 {
  fill: #e51963;
}

.emotion-18[aria-disabled='false']:active+.emotion-21 {
  background-color: #5e127e40;
  fill: #8c40ef;
}

.emotion-18[aria-disabled='false']:active+.emotion-21 .emotion-23 {
  fill: #f1eefc;
}

.emotion-18[aria-disabled='false']:focus-visible+.emotion-21 {
  outline: -webkit-focus-ring-color auto 1px;
}

.emotion-18[aria-invalid='true']:focus+.emotion-21 {
  background-color: #f91b6c40;
  fill: #e51963;
}

.emotion-18[aria-invalid='true']:focus+.emotion-21 .emotion-23 {
  fill: #ffebf2;
}

.emotion-20 {
  height: 1.5rem;
  width: 1.5rem;
  min-width: 1.5rem;
  min-height: 1.5rem;
  border-radius: 100%;
  fill: #d9dadd;
}

.emotion-20 .emotion-23 {
  fill: #ffffff;
}

.emotion-27 {
  font-size: 1rem;
  font-family: Inter,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1.5rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  cursor: pointer;
}

<div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        class="emotion-0 emotion-1"
      >
        <fieldset
          class="emotion-2 emotion-3"
        >
          <div
            class="emotion-4 emotion-1"
          >
            <legend
              class="emotion-6 emotion-7 emotion-8"
            >
              test
            </legend>
            <div
              class="emotion-9 emotion-10"
            >
              <div
                class="emotion-11 emotion-12"
                data-checked="true"
                data-disabled="false"
                data-error="false"
                data-has-default-cursor="false"
                data-has-label="true"
                data-image="none"
                data-testid="checked"
                data-type="radio"
                role="button"
                tabindex="0"
              >
                <div
                  class="emotion-13 emotion-14"
                >
                  <div
                    aria-disabled="false"
                    class="emotion-15 emotion-16 emotion-17"
                    data-checked="true"
                    data-error="false"
                  >
                    <input
                      aria-disabled="false"
                      aria-invalid="false"
                      checked=""
                      class="emotion-18 emotion-19"
                      id="«rb»"
                      name="test"
                      tabindex="-1"
                      type="radio"
                      value="checked"
                    />
                    <svg
                      class="emotion-20 emotion-21"
                      viewBox="0 0 24 24"
                    >
                      <g>
                        <circle
                          cx="12"
                          cy="12"
                          r="10"
                          stroke-width="2"
                        />
                        <circle
                          class="emotion-22 emotion-23"
                          cx="12"
                          cy="12"
                          r="8"
                        />
                        <circle
                          class="emotion-24 emotion-25"
                          cx="12"
                          cy="12"
                          r="5"
                        />
                      </g>
                    </svg>
                    <label
                      class="emotion-26 emotion-27 emotion-8"
                      for="«rb»"
                    >
                      Radio 1
                    </label>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </fieldset>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`selectableCardField > should trigger events correctly 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.5rem;
}

.emotion-2 {
  border: none;
  padding: 0;
  margin: 0;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.75rem;
}

.emotion-7 {
  color: #3f4250;
  font-size: 1rem;
  font-family: Inter,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.5rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: text;
}

.emotion-9 {
  display: grid;
  grid-template-columns: repeat(1, minmax(0, 1fr));
  gap: 1rem;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
}

.emotion-11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.25rem;
  position: relative;
  padding: 1rem;
  border-radius: 0.25rem;
  -webkit-transition: border-color 200ms ease,box-shadow 200ms ease;
  transition: border-color 200ms ease,box-shadow 200ms ease;
  cursor: pointer;
  background: #ffffff;
  border: 1px solid #d9dadd;
  color: #3f4250;
}

.emotion-11[data-has-label='false']>:first-child {
  margin-bottom: -0.25rem;
}

.emotion-11[data-has-default-cursor='true'] {
  cursor: default;
}

.emotion-11[data-checked='true'] {
  border: 1px solid #8c40ef;
}

.emotion-11[data-error='true'] {
  border: 1px solid #b3144d;
}

.emotion-11[data-disabled='true'] {
  border: 1px solid #e9eaeb;
  color: #b5b7bd;
  background: #f3f3f4;
  cursor: not-allowed;
}

.emotion-11[data-image="illustration"] {
  padding: 0rem;
}

.emotion-11[data-image="icon"] {
  padding: 0rem;
  padding-right: 1rem;
}

.emotion-11:hover:not([data-error='true']):not([data-disabled='true']),
.emotion-11:active:not([data-error='true']):not([data-disabled='true']) {
  border: 1px solid #8c40ef;
}

.emotion-11:hover:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'],
.emotion-11:active:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'] {
  box-shadow: 0px 4px 16px 4px #f6f3ffcc;
}

.emotion-11[data-has-label='true'] .ehkrmld6,
.emotion-11[data-has-label='true'] .emotion-15 {
  width: 100%;
}

.emotion-14 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0.5rem;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
}

.emotion-14 .eqr7bqq3 {
  cursor: pointer;
}

.emotion-14[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.emotion-14[aria-disabled='true'] .eqr7bqq3 {
  cursor: not-allowed;
}

.emotion-14[aria-disabled='true'] .emotion-19 {
  fill: #e9eaeb;
}

.emotion-14[aria-disabled='true'] .emotion-19 .emotion-21 {
  stroke: #d9dadd;
  fill: #f3f3f4;
}

.emotion-14[aria-disabled='true'] .emotion-17[aria-invalid="true"]:checked+.emotion-19 {
  fill: #ffd3e3;
}

.emotion-14[aria-disabled='true'] .emotion-17[aria-invalid="true"]:checked+.emotion-19 .emotion-21 {
  stroke: #ffd3e3;
  fill: #ffd3e3;
}

.emotion-14[aria-disabled='true'] .emotion-17[aria-invalid="true"]+.emotion-19 {
  fill: #ffebf2;
}

.emotion-14[aria-disabled='true'] .emotion-17[aria-invalid="true"]+.emotion-19 .emotion-21 {
  stroke: #ffbbd3;
  fill: #ffebf2;
}

.emotion-14[aria-disabled='true'] .emotion-17:checked+.emotion-19 {
  fill: #e5dbfd;
}

.emotion-14[aria-disabled='true'] .emotion-17:checked+.emotion-19 .emotion-21 {
  stroke: #d8c5fc;
  fill: #d8c5fc;
}

.emotion-14[aria-disabled='true'] .emotion-17[aria-checked="mixed"]+.emotion-19 {
  fill: #e5dbfd;
}

.emotion-14[aria-disabled='true'] .emotion-17[aria-checked="mixed"]+.emotion-19 .emotion-21 {
  stroke: #e5dbfd;
  fill: #e5dbfd;
}

.emotion-14 .emotion-17:checked+.emotion-19 path {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-transform: translate(2px, 2px);
  -moz-transform: translate(2px, 2px);
  -ms-transform: translate(2px, 2px);
  transform: translate(2px, 2px);
}

.emotion-14 .emotion-17:checked+.emotion-19 .emotion-21 {
  fill: #8c40ef;
  stroke: #8c40ef;
}

.emotion-14 .emotion-17[aria-invalid="true"]:checked+.emotion-19 .emotion-21 {
  fill: #e51963;
  stroke: #e51963;
}

.emotion-14 .emotion-17[aria-checked="mixed"]+.emotion-19 .eqr7bqq5 {
  fill: #ffffff;
}

.emotion-14 .emotion-17[aria-checked="mixed"]+.emotion-19 .emotion-21 {
  fill: #8c40ef;
  stroke: #8c40ef;
}

.emotion-14:hover[aria-disabled='false'] .emotion-17[aria-invalid='false'][aria-checked='false']+.emotion-19 .emotion-21 {
  stroke: #792dd4;
  fill: #e5dbfd;
}

.emotion-14:hover[aria-disabled='false'] .emotion-17[aria-invalid='false'][aria-checked='true']+.emotion-19 .emotion-21 {
  stroke: #792dd4;
  fill: #792dd4;
}

.emotion-14:hover[aria-disabled='false'] .emotion-17[aria-invalid='false'][aria-checked='mixed']+.emotion-19 .emotion-21 {
  stroke: #792dd4;
  fill: #792dd4;
}

.emotion-14:hover[aria-disabled='false'] .emotion-17[aria-invalid='true'][aria-checked='false']+.emotion-19 .emotion-21 {
  stroke: #92103f;
  fill: #ffd3e3;
}

.emotion-14:hover[aria-disabled='false'] .emotion-17[aria-invalid='true'][aria-checked='true']+.emotion-19 .emotion-21 {
  stroke: #d6175c;
  fill: #d6175c;
}

.emotion-14 .emotion-17[aria-invalid="true"]+.emotion-19 {
  fill: #e51963;
}

.emotion-14 .emotion-17[aria-invalid="true"]+.emotion-19 .emotion-21 {
  stroke: #e51963;
  fill: #ffebf2;
}

.emotion-14[data-checked='true'] {
  color: #641cb3;
}

.emotion-14[data-error='true'] {
  color: #b3144d;
}

.emotion-14[aria-disabled='true'] {
  color: #b5b7bd;
}

.emotion-14 input+svg {
  display: none;
}

.emotion-14 label {
  width: 100%;
}

.emotion-14:hover[aria-disabled='false'] .emotion-17[aria-invalid='false'][aria-checked='false']+.emotion-19 .emotion-21 {
  fill: #ffffff;
  stroke: #d9dadd;
}

.emotion-14:hover[aria-disabled='false'] .emotion-17[aria-invalid='false'][aria-checked='true']+.emotion-19 .emotion-21 {
  stroke: #8c40ef;
  fill: #8c40ef;
}

.emotion-14:hover[aria-disabled='false'] .emotion-17[aria-invalid='false'][aria-checked='mixed']+.emotion-19 .emotion-21 {
  stroke: #8c40ef;
  fill: #8c40ef;
}

.emotion-14 .emotion-17:focus+.emotion-19,
.emotion-14 .emotion-17:active+.emotion-19 {
  outline: none;
  background-color: #ffffff;
  fill: #ffffff;
}

.emotion-14 .emotion-17[aria-checked='false'] .emotion-21 {
  fill: #ffffff;
  stroke: #d9dadd;
}

.emotion-16 {
  position: absolute;
  white-space: nowrap;
  height: 1.5rem;
  width: 1.5rem;
  opacity: 0;
  border-width: 0;
}

.emotion-16:not(:disabled) {
  cursor: pointer;
}

.emotion-16:disabled {
  cursor: not-allowed;
}

.emotion-16:not(:disabled):checked+.emotion-19,
.emotion-16:not(:disabled)[aria-checked='mixed']+.emotion-19 {
  fill: #8c40ef;
}

.emotion-16:not(:disabled):checked+.emotion-19 .emotion-21,
.emotion-16:not(:disabled)[aria-checked='mixed']+.emotion-19 .emotion-21 {
  stroke: #8c40ef;
}

.emotion-16:not(:disabled)[aria-invalid='true']+.emotion-19,
.emotion-16:not(:disabled)[aria-invalid='mixed']+.emotion-19 {
  fill: #ffebf2;
}

.emotion-16:not(:disabled)[aria-invalid='true']+.emotion-19 .emotion-21,
.emotion-16:not(:disabled)[aria-invalid='mixed']+.emotion-19 .emotion-21 {
  stroke: #b3144d;
}

.emotion-16:focus+.emotion-19 {
  background-color: #f1eefc;
  fill: #ffebf2;
  outline: 1px solid 0px 0px 0px 3px #8c40ef40;
}

.emotion-16:focus+.emotion-19 .emotion-21 {
  stroke: #792dd4;
  fill: #e5dbfd;
}

.emotion-16[aria-invalid='true']:focus+.emotion-19 {
  background-color: #ffebf2;
  fill: #ffebf2;
  outline: 1px solid 0px 0px 0px 3px #f91b6c40;
}

.emotion-16[aria-invalid='true']:focus+.emotion-19 .emotion-21 {
  stroke: #92103f;
  fill: #ffd3e3;
}

.emotion-18 {
  border-radius: 0.25rem;
  height: 1.5rem;
  width: 1.5rem;
  min-width: 1.5rem;
  min-height: 1.5rem;
}

.emotion-18 path {
  fill: #ffffff;
  -webkit-transform: translate(2px, 2px);
  -moz-transform: translate(2px, 2px);
  -ms-transform: translate(2px, 2px);
  transform: translate(2px, 2px);
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.emotion-20 {
  fill: #ffffff;
  stroke: #d9dadd;
}

.emotion-22 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.25rem;
}

.emotion-24 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 0.25rem;
}

.emotion-27 {
  color: #3f4250;
  font-size: 1rem;
  font-family: Inter,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1.5rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  width: 100%;
  cursor: pointer;
}

<div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        class="emotion-0 emotion-1"
      >
        <fieldset
          class="emotion-2 emotion-3"
        >
          <div
            class="emotion-4 emotion-1"
          >
            <legend
              class="emotion-6 emotion-7 emotion-8"
            >
              test
            </legend>
            <div
              class="emotion-9 emotion-10"
            >
              <div
                class="emotion-11 emotion-12"
                data-checked="false"
                data-disabled="false"
                data-error="false"
                data-has-default-cursor="false"
                data-has-label="true"
                data-image="none"
                data-type="checkbox"
                role="button"
                tabindex="0"
              >
                <div
                  aria-disabled="false"
                  class="emotion-13 emotion-14 emotion-15"
                  data-checked="false"
                  data-error="false"
                >
                  <input
                    aria-checked="false"
                    aria-invalid="false"
                    class="emotion-16 emotion-17"
                    id="«rl»"
                    name="test"
                    tabindex="-1"
                    type="checkbox"
                    value="radio 1"
                  />
                  <svg
                    class="emotion-18 emotion-19"
                    fill="none"
                    viewBox="0 0 24 24"
                  >
                    <g>
                      <rect
                        class="emotion-20 emotion-21"
                        height="16"
                        rx="0.125rem"
                        stroke-width="2"
                        width="16"
                        x="4"
                        y="4"
                      />
                      <path
                        clip-rule="evenodd"
                        d="M15.6678 5.26709C16.0849 5.6463 16.113 6.28907 15.7307 6.70276L9.29172 13.6705C9.10291 13.8748 8.83818 13.9937 8.55884 13.9998C8.2795 14.0058 8.0098 13.8984 7.81223 13.7024L4.30004 10.2185C3.89999 9.82169 3.89999 9.17831 4.30004 8.78149C4.70009 8.38467 5.34869 8.38467 5.74874 8.78149L8.50441 11.5149L14.2205 5.32951C14.6028 4.91583 15.2508 4.88788 15.6678 5.26709Z"
                        fill="white"
                        fill-rule="evenodd"
                        height="9"
                        width="12"
                        x="5"
                        y="4"
                      />
                    </g>
                  </svg>
                  <div
                    class="emotion-22 emotion-1"
                  >
                    <div
                      class="emotion-24 emotion-1"
                    >
                      <label
                        class="emotion-26 emotion-27 emotion-8"
                        for="«rl»"
                      >
                        Radio 1
                      </label>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="emotion-11 emotion-12"
                data-checked="false"
                data-disabled="false"
                data-error="false"
                data-has-default-cursor="false"
                data-has-label="true"
                data-image="none"
                data-type="checkbox"
                role="button"
                tabindex="0"
              >
                <div
                  aria-disabled="false"
                  class="emotion-13 emotion-14 emotion-15"
                  data-checked="false"
                  data-error="false"
                >
                  <input
                    aria-checked="false"
                    aria-invalid="false"
                    class="emotion-16 emotion-17"
                    id="«rp»"
                    name="test"
                    tabindex="-1"
                    type="checkbox"
                    value="radio 2"
                  />
                  <svg
                    class="emotion-18 emotion-19"
                    fill="none"
                    viewBox="0 0 24 24"
                  >
                    <g>
                      <rect
                        class="emotion-20 emotion-21"
                        height="16"
                        rx="0.125rem"
                        stroke-width="2"
                        width="16"
                        x="4"
                        y="4"
                      />
                      <path
                        clip-rule="evenodd"
                        d="M15.6678 5.26709C16.0849 5.6463 16.113 6.28907 15.7307 6.70276L9.29172 13.6705C9.10291 13.8748 8.83818 13.9937 8.55884 13.9998C8.2795 14.0058 8.0098 13.8984 7.81223 13.7024L4.30004 10.2185C3.89999 9.82169 3.89999 9.17831 4.30004 8.78149C4.70009 8.38467 5.34869 8.38467 5.74874 8.78149L8.50441 11.5149L14.2205 5.32951C14.6028 4.91583 15.2508 4.88788 15.6678 5.26709Z"
                        fill="white"
                        fill-rule="evenodd"
                        height="9"
                        width="12"
                        x="5"
                        y="4"
                      />
                    </g>
                  </svg>
                  <div
                    class="emotion-22 emotion-1"
                  >
                    <div
                      class="emotion-24 emotion-1"
                    >
                      <label
                        class="emotion-26 emotion-27 emotion-8"
                        for="«rp»"
                      >
                        Radio 2
                      </label>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </fieldset>
      </div>
    </form>
  </div>
</DocumentFragment>
`;
